--- a/src/app/clarity/descriptions/Description.m.scss
+++ b/src/app/clarity/descriptions/Description.m.scss
@@ -61,7 +61,7 @@
   font-weight: bold;
 }
 .background {
-  background-color: hsla(0, 0%, 100%, 0.17);
+  background-color: hsl(0, 0%, 100%, 0.17);
 }
 .title {
   text-decoration: underline;
