--- a/src/app/compare/CompareStat.m.scss
+++ b/src/app/compare/CompareStat.m.scss
@@ -29,7 +29,7 @@
   width: 100%;
   > span {
     display: block;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgb(255, 255, 255, 0.25);
     height: 100%;
   }
 }
