--- a/src/app/destiny1/loadout-builder/LoadoutBuilderDropTarget.m.scss
+++ b/src/app/destiny1/loadout-builder/LoadoutBuilderDropTarget.m.scss
@@ -1,6 +1,6 @@
 .onDragEnter {
-  background-color: rgba(200, 200, 200, 0.2);
+  background-color: rgb(200, 200, 200, 0.2);
 }
 .onDragHover {
-  box-shadow: inset 0 0 6px 0 rgba(200, 200, 200, 0.7);
+  box-shadow: inset 0 0 6px 0 rgb(200, 200, 200, 0.7);
 }
