--- a/src/app/destiny1/loadout-builder/LoadoutBuilderItem.m.scss
+++ b/src/app/destiny1/loadout-builder/LoadoutBuilderItem.m.scss
@@ -4,7 +4,7 @@
 }
 
 .vendorIconBackground {
-  background-color: rgba(100, 100, 100, 0.6);
+  background-color: rgb(100, 100, 100, 0.6);
   position: absolute;
   width: 20px;
   height: 20px;
