--- a/src/app/hotkeys/HotkeysCheatSheet.m.scss
+++ b/src/app/hotkeys/HotkeysCheatSheet.m.scss
@@ -13,7 +13,7 @@
   left: 0;
   color: var(--theme-text);
   font-size: 1em;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgb(0, 0, 0, 0.9);
   z-index: 2000;
   backdrop-filter: blur(5px);
 }
