--- a/src/app/inventory-page/InventoryCollapsibleTitle.m.scss
+++ b/src/app/inventory-page/InventoryCollapsibleTitle.m.scss
@@ -16,7 +16,7 @@
 }
 
 .postmasterFull {
-  background-color: rgba(151, 4, 1, 0.75) !important;
+  background-color: rgb(151, 4, 1, 0.75) !important;
 }
 
 // The wrapping H3 element
