--- a/src/app/inventory-page/StoreBucket.m.scss
+++ b/src/app/inventory-page/StoreBucket.m.scss
@@ -35,7 +35,7 @@
   gap: var(--item-margin);
   width: 100%;
   padding-bottom: var(--item-margin);
-  border-bottom: 1px solid rgba(150, 150, 150, 0.5);
+  border-bottom: 1px solid rgb(150, 150, 150, 0.5);
 
   &:last-of-type {
     border-bottom: none;
