--- a/src/app/inventory-page/StoreBuckets.m.scss
+++ b/src/app/inventory-page/StoreBuckets.m.scss
@@ -14,7 +14,7 @@
 }
 
 .postmasterFull {
-  background-color: rgba(151, 4, 1, 0.25) !important;
+  background-color: rgb(151, 4, 1, 0.25) !important;
 }
 
 // If there's a "pull from postmaster" button, we need to stack the bucket
