--- a/src/app/inventory/MoveNotifications.m.scss
+++ b/src/app/inventory/MoveNotifications.m.scss
@@ -5,7 +5,7 @@
   width: calc(var(--item-size) / 2);
   z-index: 1;
   border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgb(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
