--- a/src/app/inventory/NewItemIndicator.m.scss
+++ b/src/app/inventory/NewItemIndicator.m.scss
@@ -11,5 +11,5 @@
   border-radius: 50%;
   pointer-events: none;
   background-color: white;
-  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.8));
+  filter: drop-shadow(0 0 2px rgb(0, 0, 0, 0.8));
 }
