--- a/src/app/item-popup/ArchetypeSocket.m.scss
+++ b/src/app/item-popup/ArchetypeSocket.m.scss
@@ -18,7 +18,7 @@
   }
 
   :global(.armory) & {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgb(0, 0, 0, 0.5);
     backdrop-filter: blur(6px);
   }
 }
