--- a/src/app/item-popup/ItemStat.m.scss
+++ b/src/app/item-popup/ItemStat.m.scss
@@ -48,7 +48,7 @@
   height: 100%;
 
   :global(.armory) & {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgb(0, 0, 0, 0.5);
     backdrop-filter: blur(6px);
   }
 }
