--- a/src/app/loadout-builder/NoBuildsFoundExplainer.m.scss
+++ b/src/app/loadout-builder/NoBuildsFoundExplainer.m.scss
@@ -7,7 +7,7 @@
 }
 
 .noBuildsFoundMsg {
-  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-top: 1px solid rgb(255, 255, 255, 0.3);
   padding-top: 20px;
 
   > :global(.app-icon) {
