--- a/src/app/loadout-builder/generated-sets/GeneratedSet.m.scss
+++ b/src/app/loadout-builder/generated-sets/GeneratedSet.m.scss
@@ -3,7 +3,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  border-bottom: 1px solid rgb(255, 255, 255, 0.3);
   gap: 8px;
   box-sizing: border-box;
   padding-top: 10px;
