--- a/src/app/notifications/Notification.m.scss
+++ b/src/app/notifications/Notification.m.scss
@@ -43,7 +43,7 @@
 
 .timer {
   height: 1px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgb(255, 255, 255, 0.5);
 }
 
 .details {
