--- a/src/app/organizer/DropDown.m.scss
+++ b/src/app/organizer/DropDown.m.scss
@@ -47,7 +47,7 @@ $dropdown-menu: 10;
   font-size: 12px;
   margin: 0;
   padding: 8px;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
+  text-shadow: 1px 1px 3px rgb(0, 0, 0, 0.25);
   min-width: 15em;
   gap: 8px;
 
