--- a/src/app/progress/Pathfinder.m.scss
+++ b/src/app/progress/Pathfinder.m.scss
@@ -87,7 +87,7 @@
 
   :global(.milestone-quest) {
     align-items: center;
-    background: rgba(255, 255, 255, 0.05);
+    background: rgb(255, 255, 255, 0.05);
     padding: 8px;
     width: 100%;
   }
