--- a/src/app/records/Record.m.scss
+++ b/src/app/records/Record.m.scss
@@ -15,7 +15,7 @@
 
 .triumphRecord {
   position: relative;
-  background: rgba(255, 255, 255, 0.05);
+  background: rgb(255, 255, 255, 0.05);
   border: 1px solid #666;
   padding: 12px;
   display: flex;
@@ -260,7 +260,7 @@
 
 .interval {
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgb(255, 255, 255, 0.1);
 }
 .intervalUnlocked {
   background-color: white;
