--- a/src/app/search/SearchHistory.m.scss
+++ b/src/app/search/SearchHistory.m.scss
@@ -23,7 +23,7 @@
 
   tr:nth-child(2n) {
     td {
-      background-color: rgba(0, 0, 0, 0.2);
+      background-color: rgb(0, 0, 0, 0.2);
     }
   }
 }
