--- a/src/app/shell/ErrorPanel.m.scss
+++ b/src/app/shell/ErrorPanel.m.scss
@@ -51,7 +51,7 @@
   box-sizing: border-box;
   flex: 1;
   position: relative;
-  border: 4px solid rgba(255, 255, 255, 0.3);
+  border: 4px solid rgb(255, 255, 255, 0.3);
 
   iframe {
     width: 100%;
