--- a/src/app/storage/LocalStorageInfo.m.scss
+++ b/src/app/storage/LocalStorageInfo.m.scss
@@ -9,7 +9,7 @@
 
 .gauge {
   flex: 1;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgb(0, 0, 0, 0.6);
   position: relative;
   min-height: 17px;
   display: flex;
