--- a/src/app/store-stats/ClarityCharacterStat.m.scss
+++ b/src/app/store-stats/ClarityCharacterStat.m.scss
@@ -32,7 +32,7 @@
 
   /* stylelint-disable-next-line no-descending-specificity */
   thead th {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgb(255, 255, 255, 0.2);
     &:first-child {
       border: none;
     }
