--- a/src/app/wishlists/WishListPerkThumb.m.scss
+++ b/src/app/wishlists/WishListPerkThumb.m.scss
@@ -16,5 +16,5 @@
   position: absolute;
   top: -4px;
   right: -5px;
-  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.9));
+  filter: drop-shadow(0 0 2px rgb(0, 0, 0, 0.9));
 }
