--- a/src/app/dim-ui/CheckButton.m.scss
+++ b/src/app/dim-ui/CheckButton.m.scss
@@ -15,7 +15,7 @@
 
   // Don't do hover
   @include interactive($hover: true, $active: true) {
-    background-color: rgba(255, 255, 255, 0.2) !important;
+    background-color: rgb(255, 255, 255, 0.2) !important;
     color: var(--theme-text) !important;
   }
 
