--- a/src/app/dim-ui/Sheet.m.scss
+++ b/src/app/dim-ui/Sheet.m.scss
@@ -5,7 +5,7 @@
 // TODO: When we stop supporting Chrome <99 and Safari <15.4, we can use @layer
 // here to fix these cascade issues once and for all.
 
-$control-color: rgba(255, 255, 255, 0.5);
+$control-color: rgb(255, 255, 255, 0.5);
 
 .sheet {
   max-height: calc(var(--viewport-height) - var(--header-height) - 8px);
