--- a/src/app/dim-ui/_tooltip-mixins.scss
+++ b/src/app/dim-ui/_tooltip-mixins.scss
@@ -18,7 +18,7 @@
 @mixin tooltip-section-color($color) {
   &:not(:empty) {
     color: color.mix(white, $color, 80%);
-    background-color: rgba($color, 0.175);
+    background-color: rgb($color, 0.175);
     border-top-color: transparent !important;
   }
 }
