--- a/src/app/inventory-page/StoreBucketDropTarget.m.scss
+++ b/src/app/inventory-page/StoreBucketDropTarget.m.scss
@@ -2,10 +2,10 @@
 
 :global(.sub-bucket) {
   &.canDrop {
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgb(255, 255, 255, 0.2);
   }
   &.over {
-    box-shadow: inset 0 0 6px 0 rgba(255, 255, 255, 0.7);
+    box-shadow: inset 0 0 6px 0 rgb(255, 255, 255, 0.7);
   }
   &.grouped {
     display: flex;
