--- a/src/app/inventory/BadgeInfo.m.scss
+++ b/src/app/inventory/BadgeInfo.m.scss
@@ -55,7 +55,7 @@
   }
 
   :global(.app-icon) {
-    filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.8));
+    filter: drop-shadow(0 0 1px rgb(0, 0, 0, 0.8));
   }
 }
 
