--- a/src/app/issue-awareness-banner/Game2Give.m.scss
+++ b/src/app/issue-awareness-banner/Game2Give.m.scss
@@ -10,7 +10,7 @@
 }
 
 .item {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgb(0, 0, 0, 0.3);
   display: flex;
   flex-direction: row;
 }
@@ -63,11 +63,11 @@
     linear-gradient(
       -45deg,
       transparent 33%,
-      rgba(0, 0, 0, 0.1) 33%,
-      rgba(0, 0, 0, 0.1) 66%,
+      rgb(0, 0, 0, 0.1) 33%,
+      rgb(0, 0, 0, 0.1) 66%,
       transparent 66%
     ),
-    linear-gradient(to top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.25)),
+    linear-gradient(to top, rgb(255, 255, 255, 0.25), rgb(0, 0, 0, 0.25)),
     linear-gradient(to left, #ac7b28, #e8a534);
   border-radius: 2px;
   background-size:
