--- a/src/app/loadout-builder/filter/StatConstraintEditor.m.scss
+++ b/src/app/loadout-builder/filter/StatConstraintEditor.m.scss
@@ -30,7 +30,7 @@
     'grip name buttons'
     'grip bar bar';
   gap: 0 4px;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgb(0, 0, 0, 0.6);
   align-items: center;
   padding: 4px 4px 4px 0;
   font-size: 14px;
@@ -41,7 +41,7 @@
 
   &.ignored {
     grid-template-areas: 'grip name buttons';
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgb(0, 0, 0, 0.3);
   }
 }
 
@@ -101,7 +101,7 @@
 // Tiers that can't be reached given the currently selected minimums
 .maxed:not(.selectedStatBar) {
   color: #666;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgb(255, 255, 255, 0.1);
 }
 .maxRestricted:not(.selectedStatBar) {
   color: #666;
