--- a/src/app/loadout/ingame/InGameLoadoutStrip.m.scss
+++ b/src/app/loadout/ingame/InGameLoadoutStrip.m.scss
@@ -27,7 +27,7 @@
   font-size: 14px;
 }
 .inGameTileWrapper {
-  background: rgba(0, 0, 0, 0.25);
+  background: rgb(0, 0, 0, 0.25);
   cursor: pointer;
   display: flex;
 }
