--- a/src/app/loadout/loadout-edit/LoadoutEditSubclass.m.scss
+++ b/src/app/loadout/loadout-edit/LoadoutEditSubclass.m.scss
@@ -80,10 +80,10 @@
 
 .canDrop {
   filter: invert(20%);
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgb(255, 255, 255, 0.2);
 }
 
 .isOver {
   filter: invert(40%);
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: rgb(255, 255, 255, 0.4);
 }
