--- a/src/app/loadout/loadout-ui/LoadoutItemCategorySection.m.scss
+++ b/src/app/loadout/loadout-ui/LoadoutItemCategorySection.m.scss
@@ -77,8 +77,8 @@
 }
 
 .placeholder {
-  background: rgba(255, 255, 255, 0.05);
-  color: rgba(255, 255, 255, 0.5);
+  background: rgb(255, 255, 255, 0.05);
+  color: rgb(255, 255, 255, 0.5);
   width: 100%;
   height: var(--item-size);
   display: flex;
