--- a/src/app/login/Login.m.scss
+++ b/src/app/login/Login.m.scss
@@ -5,11 +5,11 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgb(0, 0, 0, 0.6);
   color: var(--theme-text);
   max-width: 800px;
   border-top: 5px solid #888;
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 2px rgb(0, 0, 0, 0.5);
   padding: 1rem 3rem;
   text-align: center;
   z-index: 99999;
