--- a/src/app/records/PresentationNode.m.scss
+++ b/src/app/records/PresentationNode.m.scss
@@ -34,7 +34,7 @@
   opacity: 0.7;
 }
 h3.completed {
-  background-color: rgba(245, 220, 86, 0.1) !important;
+  background-color: rgb(245, 220, 86, 0.1) !important;
 }
 
 /* Styles for PresentationNodeProgress */
