--- a/src/app/records/universal-ornaments/UniversalOrnaments.m.scss
+++ b/src/app/records/universal-ornaments/UniversalOrnaments.m.scss
@@ -21,7 +21,7 @@
   align-items: flex-start;
   box-sizing: border-box;
   position: relative;
-  background: rgba(255, 255, 255, 0.05);
+  background: rgb(255, 255, 255, 0.05);
   border: 1px solid #666;
 
   > h3 {
