--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -41,7 +41,7 @@
       0 0 0 1px var(--theme-search-dropdown-border),
       0 0 0 1px var(--theme-sheet-search-bg),
       0 0 0 1px var(--theme-mobile-background),
-      0 1px 4px 1px rgba(0, 0, 0, 0.5);
+      0 1px 4px 1px rgb(0, 0, 0, 0.5);
     max-height: calc(var(--viewport-height) - var(--header-height)) !important;
   }
 
