--- a/src/app/store-stats/CharacterStats.m.scss
+++ b/src/app/store-stats/CharacterStats.m.scss
@@ -49,7 +49,7 @@
       &.boostedValue {
         color: $stat-modded;
         font-weight: bold;
-        text-shadow: rgba(0, 0, 0, 0.5) 0 0 2px;
+        text-shadow: rgb(0, 0, 0, 0.5) 0 0 2px;
       }
       :global(.phone-portrait) & {
         font-size: 12px;
