--- a/src/app/strip-sockets/StripSockets.m.scss
+++ b/src/app/strip-sockets/StripSockets.m.scss
@@ -31,7 +31,7 @@
   box-sizing: border-box;
 
   @include interactive($hover: true) {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgb(255, 255, 255, 0.1);
   }
   > * {
     margin-right: 8px;
