--- a/src/app/loadout-builder/filter/TierlessStatConstraintEditor.m.scss
+++ b/src/app/loadout-builder/filter/TierlessStatConstraintEditor.m.scss
@@ -81,44 +81,6 @@
   }
 }
 
-.statBarSegment {
-  composes: flexRow from '../../dim-ui/common.m.scss';
-  flex: 1;
-  background-color: var(--theme-button-bg);
-  color: var(--theme-button-text);
-  font-size: 12px;
-  height: 20px;
-  box-sizing: border-box;
-
-  @include interactive($hover: true) {
-    outline: 1px solid var(--theme-accent-primary);
-  }
-
-  /* stylelint-disable-next-line no-descending-specificity */
-  > * {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-  }
-}
-
-// Tiers that can't be reached given the currently selected minimums
-.maxed:not(.selectedStatBar) {
-  color: #666;
-  background-color: rgb(255, 255, 255, 0.1);
-}
-.maxRestricted:not(.selectedStatBar) {
-  color: #666;
-  background-color: transparent;
-}
-
-.selectedStatBar {
-  background-color: var(--theme-accent-primary);
-  color: var(--theme-text-invert);
-}
-
 .buttons {
   composes: flexRow from '../../dim-ui/common.m.scss';
 }
@@ -165,7 +127,9 @@
   position: absolute;
   background-color: white;
   height: 100%;
-  transition: all 0.2s ease-in-out;
+  transition:
+    all 0.2s ease-in-out,
+    opacity 0.5s linear;
 }
 
 .statBarMin,
@@ -186,4 +150,17 @@
 
 .statBarMin {
   border-right: none;
+}
+
+.processing {
+  // Apply a gentle pulsing opacity animation
+  animation: processing-pulse 1s alternate infinite;
+  animation-delay: 0.5s;
+  opacity: 0.5;
+}
+
+@keyframes processing-pulse {
+  100% {
+    opacity: 0.2;
+  }
 }
