--- a/src/app/inventory/ItemIcon.m.scss
+++ b/src/app/inventory/ItemIcon.m.scss
@@ -225,8 +225,10 @@ $rgb-masterworked: dim-hex-to-rgb-values($stat-masterworked);
 }
 
 .iconOverlay {
-  top: $item-border-width;
-  left: $item-border-width;
+  // TODO: In Edge of Fate this overlay changed, but it's actually rendered at
+  // the incorrect size vs. in-game.
+  top: 0;
+  left: 0;
   height: calc(var(--item-size) - #{2 * $item-border-width});
   width: calc(var(--item-size) - #{2 * $item-border-width});
   background-size: contain;
