Slightly restyle most inline-text enhanced arrows

--- a/src/app/clarity/descriptions/Description.m.scss
+++ b/src/app/clarity/descriptions/Description.m.scss
@@ -32,7 +32,7 @@
   color: hsl(300, 100%, 81%);
 }
 
-// copy pasted from src/app/item-popup/PlugTooltip.m.scss
+// copy pasted from src/app/item-popup/PlugTooltip.m.scss with slight size tweak
 .enhancedArrow {
   &::before {
     content: '';
