--- a/src/app/item-popup/PlugTooltip.m.scss
+++ b/src/app/item-popup/PlugTooltip.m.scss
@@ -98,8 +98,9 @@
     &::before {
       content: '';
       display: inline-block;
-      width: 6px;
-      height: 11px;
+      width: 9px;
+      height: 16px;
+      vertical-align: text-bottom;
       mask-image: url('images/enhancedArrow.svg');
       background-color: $enhancedYellow;
       margin-right: 3px;
