--- a/src/app/item-feed/Highlights.m.scss
+++ b/src/app/item-feed/Highlights.m.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   margin: 4px 0;
-  gap: 4px;
+  gap: 2px;
 
   > div {
     margin-left: -3px;
@@ -19,6 +19,7 @@
 
   .multiPerk {
     border-left: 2px solid #888;
+    border-radius: 5px;
     padding-left: 2px;
   }
 }
