Add enhanced arrows to item feed, move the arrows on Organizer to avoid conflicting with multiPerk line (#11204)
* Add enhanced arrows to item feed, move the arrows on Organizer to avoid conflicting with multiPerk line

* Slightly restyle most inline-text enhanced arrows

--- a/src/app/item-feed/Highlights.m.scss
+++ b/src/app/item-feed/Highlights.m.scss
@@ -35,6 +35,19 @@
     margin-left: -1px;
   }
 }
+// copy pasted from src/app/item-popup/PlugTooltip.m.scss
+.enhancedArrow {
+  &::before {
+    content: '';
+    display: inline-block;
+    width: 9px;
+    height: 16px;
+    vertical-align: text-bottom;
+    mask-image: url('images/enhancedArrow.svg');
+    background-color: $enhancedYellow;
+    margin-right: 3px;
+  }
+}
 
 .stats {
   margin: 4px 0 0 0;
