--- a/src/app/organizer/Columns.m.scss
+++ b/src/app/organizer/Columns.m.scss
@@ -158,17 +158,17 @@
 .perkSelectable {
   cursor: pointer;
 }
+// copy pasted from src/app/item-popup/PlugTooltip.m.scss
 .enhancedArrow {
   &::before {
     content: '';
     display: inline-block;
-    width: 6px;
-    height: 11px;
+    width: 9px;
+    height: 16px;
+    vertical-align: text-bottom;
     mask-image: url('images/enhancedArrow.svg');
     background-color: $enhancedYellow;
-    margin-top: 3px;
-    margin-right: 1px;
-    margin-left: -7px;
+    margin-right: 3px;
   }
 }
 
