--- a/src/app/loadout/loadout-ui/LoadoutItemCategorySection.m.scss
+++ b/src/app/loadout/loadout-ui/LoadoutItemCategorySection.m.scss
@@ -58,6 +58,12 @@
 }
 .categoryArmor {
   width: calc(5 * var(--item-size) + 4 * var(--item-margin));
+  :global(.stat-bars) {
+    max-width: fit-content;
+    :global(.stat-row) {
+      gap: 8px;
+    }
+  }
 }
 .categoryGeneral {
   width: calc(2 * var(--item-size) + 1 * var(--item-margin));
