--- a/src/app/item-feed/Highlights.m.scss
+++ b/src/app/item-feed/Highlights.m.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   margin: 4px 0;
-  gap: 2px;
+  gap: 1px;
 
   > div {
     margin-left: -3px;
@@ -18,9 +18,9 @@
   }
 
   .multiPerk {
-    border-left: 2px solid #888;
-    border-radius: 5px;
+    margin-left: -1px;
     padding-left: 2px;
+    box-shadow: -4px 0 0 -2px #888;
   }
 }
 
