--- a/src/app/organizer/Columns.m.scss
+++ b/src/app/organizer/Columns.m.scss
@@ -127,9 +127,9 @@
   }
 }
 .isPerk {
-  border-left: 2px solid #888;
-  border-radius: 5px;
-  padding-left: 3px;
+  margin-left: -1px;
+  padding-left: 2px;
+  box-shadow: -4px 0 0 -2px #888;
 }
 
 // Perks in the perk/mod columns
