multiperk bar is now a square bracket

--- a/src/app/item-feed/Highlights.m.scss
+++ b/src/app/item-feed/Highlights.m.scss
@@ -18,9 +18,11 @@
   }
 
   .multiPerk {
-    margin-left: -1px;
-    padding-left: 2px;
-    box-shadow: -4px 0 0 -2px #888;
+    margin-left: 0;
+    padding-left: 1px;
+    box-shadow:
+      -5px 0 0 -3px var(--theme-item-feed-bg),
+      -5px 0 0 -1px #888;
   }
 }
 
