Add armor intrinsic/archetype to feed, adjust multiperk indicator (#11205)
* Add armor intrinsic/archetype to feed

Ideally, this should check hasRandomizedPlugItems before showing a given socket, but that is set to false for exotic class items for some reason

* Shorten gap between perks in feed, curve ends of multiperk line to help distinguish with smaller gap, make same curve change in organizer for consistency

* Restyle multiperk bar to remove the curved edges and shorten the length, shorten gap between perks in feed

* multiperk bar is now a square bracket

--- a/src/app/organizer/Columns.m.scss
+++ b/src/app/organizer/Columns.m.scss
@@ -127,8 +127,11 @@
   }
 }
 .isPerk {
-  border-left: 2px solid #888;
-  padding-left: 3px;
+  margin-left: 0;
+  padding-left: 1px;
+  box-shadow:
+    -5px 0 0 -3px var(--org-row-bg),
+    -5px 0 0 -1px #888;
 }
 
 // Perks in the perk/mod columns
