--- a/src/app/item-feed/Highlights.m.scss
+++ b/src/app/item-feed/Highlights.m.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   margin: 4px 0;
-  gap: 4px;
+  gap: 1px;
 
   > div {
     margin-left: -3px;
@@ -18,8 +18,11 @@
   }
 
   .multiPerk {
-    border-left: 2px solid #888;
-    padding-left: 2px;
+    margin-left: 0;
+    padding-left: 1px;
+    box-shadow:
+      -5px 0 0 -3px var(--theme-item-feed-bg),
+      -5px 0 0 -1px #888;
   }
 }
 
